src/test/resources/parser/valid/list/2d/2dListStr.sbsc
// test a list of lists


a = ["a", "b", "c"];

b = ["d", "e"];


d = [a, b];