src/test/resources/parser/invalid/list/listElementMismatch.sbsc
// parser should fail if array elements are mismatched.

a = "bazinga";

b = 2;

c = [a, b];